# IWaVE

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish-pypi.yml  publish-test-pypi.yml  tests.yml
docs/: api.rst  conf.py
iwave/: __init__.py  data_models.py  dispersion.py  dispersion_relation_funct.py  intensity.py  io.py  iwave.py  optimise.py  plots.py  sample_data.py  spectral.py  window.py
tests/: conftest.py  test_dispersion.py  test_intensity.py  test_optimise.py  test_spectral.py  test_window.py
